--- a/render.yaml
+++ b/render.yaml
@@ -8,14 +8,13 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
-      - key: DB_HOST
-        sync: false
-      - key: DB_PORT
-        sync: false
-      - key: DB_USER
-        sync: false
-      - key: DB_PASSWORD
-        sync: false
-      - key: DB_NAME
-        sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: detailsmobile-db
+          property: connectionString
+  - type: pspg
+    name: detailsmobile-db
+    plan: free
+    databaseName: detailsmobile
+    user: detailsmobile_user
 
